<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".menu_fragments.MenuFragment">

    <Button
        android:id="@+id/button_menu_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/principal_green"
        android:text="@string/button_menu_settings"
        android:textColor="@color/cream"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_menu_play"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_menu_play"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_ranking"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_menu_ranking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/principal_green"
        android:text="@string/button_menu_ranking"
        android:textColor="@color/cream"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_menu_play"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_menu_play"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_play"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_menu_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/principal_green"
        android:drawablePadding="70dp"
        android:text="@string/button_menu_jugar"
        android:textColor="@color/cream"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0500000" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="212dp"
        android:src="@drawable/icono_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/textView_menu_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aleo_bold_italic"
        android:text="@string/app_name"
        android:textColor="@color/principal_green"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>