<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_repeat_new_password"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/principal_blue"
        android:drawableStart="@drawable/ic_repeat_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/principal_blue"
        android:ems="10"
        android:hint="@string/change_password_hint_repeat_new_password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingBottom="14dp"
        android:textColorHint="@color/principal_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_new_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_new_password"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/principal_blue"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/principal_blue"
        android:ems="10"
        android:hint="@string/change_password_hint_new_password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingBottom="14dp"
        android:textColorHint="@color/principal_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_current_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_current_password"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/principal_blue"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/principal_blue"
        android:ems="10"
        android:hint="@string/change_password_hint_current_password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingBottom="14dp"
        android:textColorHint="@color/principal_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_change_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/principal_blue"
        android:text="@string/change_password_dialog_confirm"
        android:textColor="@color/cream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_change_password_cancel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_repeat_new_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_repeat_new_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_change_password_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:backgroundTint="@color/cream"
        android:text="@string/sign_off_dialog_cancel"
        android:textColor="@color/principal_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText_repeat_new_password"
        app:layout_constraintStart_toStartOf="@+id/editText_repeat_new_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_repeat_new_password"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>