<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".menu_fragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_settings_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_settings_signOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/principal_blue"
                android:text="@string/button_signOff"
                android:textColor="@color/cream"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView_edit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/button_settings_change_password"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="10dp"
                android:text="@string/label_profile"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText_settings_username"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="@color/principal_blue"
                android:ems="10"
                android:hint="@string/editText_login_hint_username"
                android:inputType="textPersonName"
                android:paddingBottom="14dp"
                android:textColor="@color/principal_blue"
                android:textColorHint="@color/principal_blue"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/textView_subtitle"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView_edit"
                android:layout_width="54dp"
                android:layout_height="41dp"
                android:src="@drawable/edit"
                app:layout_constraintBottom_toBottomOf="@+id/editText_settings_username"
                app:layout_constraintEnd_toEndOf="@+id/textView_subtitle"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/editText_settings_username"
                app:layout_constraintTop_toTopOf="@+id/editText_settings_username"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/button_settings_change_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/principal_blue"
                android:text="@string/button_change_password"
                android:textColor="@color/cream"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView_edit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/textView_repeat_user"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_repeat_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:textSize="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editText_settings_username"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/editText_settings_username"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView_settings_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView_settings_profile"
        app:layout_constraintTop_toBottomOf="@+id/cardView_settings_profile"
        app:layout_constraintVertical_bias="0.08">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/switch_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumbTint="@color/principal_blue"
                android:trackTint="#BF5599E1"
                android:trackTintMode="src_over"
                app:layout_constraintBottom_toBottomOf="@+id/textView_settings_sound"
                app:layout_constraintEnd_toEndOf="@+id/textView_subtitle2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle2"
                app:layout_constraintTop_toTopOf="@+id/textView_settings_sound"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView_settings_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/switch_sound"
                android:textColor="@color/principal_blue"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle2"
                app:layout_constraintTop_toBottomOf="@+id/textView_settings_music"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="10dp"
                android:text="@string/label_setings"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_settings_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/switch_music"
                android:textColor="@color/principal_blue"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle2"
                app:layout_constraintTop_toBottomOf="@+id/textView_subtitle2"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/switch_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumbTint="@color/principal_blue"
                android:trackTint="#BF5599E1"
                android:trackTintMode="src_over"
                app:layout_constraintBottom_toBottomOf="@+id/textView_settings_music"
                app:layout_constraintEnd_toEndOf="@+id/textView_subtitle2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView_subtitle2"
                app:layout_constraintTop_toTopOf="@+id/textView_settings_music"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_back_to_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cream"
        android:text="@string/button_back_to_menu"
        android:textColor="@color/principal_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>