<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".login_register_fragments.LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:backgroundTint="@color/cream"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_login"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/login_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText_login_password"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/principal_blue"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/principal_blue"
                android:ems="10"
                android:hint="@string/editText_login_hint_password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingBottom="14dp"
                android:textColor="@color/principal_blue"
                android:textColorHint="@color/principal_blue"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editText_login_username"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editText_login_username"
                app:layout_constraintTop_toBottomOf="@+id/editText_login_username"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText_login_username"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/principal_blue"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:drawableTint="@color/principal_blue"
                android:ems="10"
                android:hint="@string/editText_login_hint_username"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"
                android:paddingBottom="14dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/principal_blue"
                android:textColorHint="@color/principal_blue"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_login"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/textView_button_login_register"
                android:textColor="@color/principal_blue"
                android:textSize="16dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/button_login"
                app:layout_constraintEnd_toEndOf="@+id/editText_login_password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_login"
                app:layout_constraintTop_toTopOf="@+id/button_login" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/principal_blue"
                android:text="@string/button_login_text"
                android:textColor="@color/cream"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editText_login_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editText_login_password"
                app:layout_constraintTop_toBottomOf="@+id/editText_login_password"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>